更换Base64类
将sun下的Base64相关类替换为apache commons-codec 下的Base64类，增加通用性